--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,2 +1,8 @@
-$green: green;
-$purple: purple;
+$white: #F4E2E2;
+
+// screens
+$ui-mobile: 320px;
+$ui-mobile-portrait: 600px;
+$ui-tablet: 768px;
+$ui-laptop: 1024px;
+$ui-desktop: 1440px;
