--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -48,6 +48,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
+      height: max-content;
     }
     
     &__link {
