Add damage users choice

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,7 +1,7 @@
 .navigation {
   background: rgba(0, 0 , 0, 0.7);
   width: 170px;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
