--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,8 +1,9 @@
 .navigation {
-  background: rgba(0, 0 , 0, 0.7);
+  background: $black;
   width: 170px;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   display: flex;
