--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,7 +1,9 @@
-$white: #F4E2E2;
 $black: #000;
 $deep-blue: #204269;
 $gold: #fec;
+$light-blue: #9cf;
+$purple: #9655C2;
+$white: #F4E2E2;
 $white-90: #f4e2e2;
 
 // screens
