Add diablo characters

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,15 @@
 $black: #000;
 $deep-blue: #204269;
 $gold: #fec;
+$gold-90: #a99877;
 $light-blue: #9cf;
+$pink: #EBB2A7;
 $purple: #9655C2;
 $white: #F4E2E2;
 $white-90: #f4e2e2;
+
+$radius-8: 8px;
+$radius-4: 4px;
 
 // screens
 $ui-mobile: 320px;
