Add winrates in geartstone

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,12 +1,17 @@
 $black: #000;
+$brown: #6b430c;
 $deep-blue: #204269;
 $gold: #fec;
 $gold-90: #a99877;
+$green: #41e041;
 $light-blue: #9cf;
+$orange: #ff8c10;
 $pink: #EBB2A7;
 $purple: #9655C2;
+$red: #f13d3d;
 $white: #F4E2E2;
 $white-90: #f4e2e2;
+$yellow: #ffc600;
 
 $radius-8: 8px;
 $radius-4: 4px;
