Add top players to wow

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,7 +6,9 @@ $gold-90: #a99877;
 $green: #41e041;
 $light-blue: #9cf;
 $orange: #ff8c10;
+$orange-90: #e37434;
 $pink: #EBB2A7;
+$pink-90: #e39f78;
 $purple: #9655C2;
 $red: #f13d3d;
 $white: #F4E2E2;
